add getUsersByAdmin_ReturnsAllUsers test in spring boot service